# Home-Price-Prediction-System-in-bangalore

./: .gitignore  pyproject.toml
backend/: server.py  util.py
frontend/: app.css  app.html
model/: banglore_home_prices_final.ipynb
model/.ipynb_checkpoints/: banglore_home_prices_final-checkpoint.ipynb
